...
                    onPressed: () {
                      ref
                          .read(onboardingProvider.notifier)
                          .completeOnboarding();
                      context.go('/auth/create');
                    },
                    child: const Text('Continue'),
                  ),
                ],
              ),
            ),
          ),
        ],
...
